--- a/EisenhowerMatrixPlanner/EisenhowerMatrixPlanner/Views/Controls/TaskCard.xaml
+++ b/EisenhowerMatrixPlanner/EisenhowerMatrixPlanner/Views/Controls/TaskCard.xaml
@@ -3,14 +3,26 @@
 			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 Width="170" Height="110"
-			 Cursor="Hand">
+			 Cursor="Hand"
+			 MouseDoubleClick="TaskCard_MouseDoubleClick">
 
 	<!-- Clip برای گوشه گرد -->
 	<UserControl.Clip>
 		<RectangleGeometry RadiusX="16" RadiusY="16"
 						   Rect="0,0,170,110"/>
 	</UserControl.Clip>
-
+	<UserControl.Triggers>
+		<EventTrigger RoutedEvent="Loaded">
+			<BeginStoryboard>
+				<Storyboard>
+					<DoubleAnimation Storyboard.TargetProperty="(Canvas.Left)"
+									 Duration="0:0:0.3" />
+					<DoubleAnimation Storyboard.TargetProperty="(Canvas.Top)"
+									 Duration="0:0:0.3" />
+				</Storyboard>
+			</BeginStoryboard>
+		</EventTrigger>
+	</UserControl.Triggers>
 	<Border Background="White"
 			Padding="16"
 			BorderBrush="#e0e0e0"
